cmake_minimum_required(VERSION 3.6)

PROJECT(gacpp)

INCLUDE_DIRECTORIES(
"lib3rd/catch.git/include/"
"./"
)

AUX_SOURCE_DIRECTORY(test TEST_SOURCES)
FILE(GLOB_RECURSE GACPP_HEADERS ./gacpp/*.hpp)


SET(TEST_ALL
	${GACPP_HEADERS}
	${TEST_SOURCES}
)

#SET(LIBRARIES
#	libm.so
#)


ADD_EXECUTABLE(test_all ${TEST_ALL})
#TARGET_LINK_LIBRARIES(../bin/bin ${LIBRARIES})

